Closed
Bug 390228
Opened 18 years ago
Closed 18 years ago
Redragging over empty text field doesn't show drag caret, except for the last text field
Categories
(Core :: Layout, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: mrbkap)
References
Details
(Keywords: regression, testcase)
Attachments
(2 files)
296 bytes,
text/html
|
Details | |
2.27 KB,
patch
|
roc
:
review+
roc
:
superreview+
dbaron
:
approval1.9+
|
Details | Diff | Splinter Review |
See testcase.
To reproduce:
- Select some text to drag, then drag it over the text inputs and textareas.
Notice that when dragging over them, you see a (non-blinking) caret the first time, but not when you drag a second time over them.
What's interesting is that the last text field doesn't seem to suffer from this.
This regressed between 2006-04-17 and 2006-04-18, I think a regression from bug 287813.
Assignee | ||
Comment 1•18 years ago
|
||
This fix also fixes the caret flicker problem by not erasing the caret automatically each time editor asks it to. The actual problem here was that we weren't telling our presShell what the current caret was, which meant that it wasn't drawing it.
Assignee: nobody → mrbkap
Status: NEW → ASSIGNED
Attachment #275181 -
Flags: superreview?(roc)
Attachment #275181 -
Flags: review?(roc)
Attachment #275181 -
Flags: superreview?(roc)
Attachment #275181 -
Flags: superreview+
Attachment #275181 -
Flags: review?(roc)
Attachment #275181 -
Flags: review+
Assignee | ||
Comment 2•18 years ago
|
||
Comment on attachment 275181 [details] [diff] [review]
Proposed fix
This patch fixes the drag indicator for empty textfields.
Attachment #275181 -
Flags: approval1.9?
Comment on attachment 275181 [details] [diff] [review]
Proposed fix
a1.9=dbaron
Attachment #275181 -
Flags: approval1.9? → approval1.9+
Assignee | ||
Comment 4•18 years ago
|
||
Fix checked into trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 5•18 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a8pre) Gecko/2007082111 Minefield/3.0a8pre
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•